tests/integration/integration.exp
Error --------------------------------------------------------------- foo.js:2:9

Cannot resolve module `./bar`.

Error: foo.js:2
  2: require('./bar');
             ^^^^^^^ Cannot resolve module `./bar`.


Found 1 error
